--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
             <div class="card col-12 col-md-6 col-lg-3">
               <div class="card-inner">
                 <div class="card-img">
-                  <span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span>
+                  <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span></a>
                 </div>
                 <div class="card-box">
                   <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">5-series</a></h5>
                 </div>
                 <div class="card-icon">
-                  <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span></a>
+                  <span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span>
                 </div>
               </div>
             </div>
@@ -254,7 +254,7 @@
             <div class="card col-12 col-md-6 col-lg-3">
               <div class="card-inner">
                 <div class="card-img">
-                    <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span></a>
+                    <span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span>
                 </div>
                 <div class="card-box">
                   <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">7-series</a></h5>
@@ -293,13 +293,13 @@
             <div class="card col-12 col-md-6 col-lg-3">
               <div class="card-inner">
                 <div class="card-img">
-                  <span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span>
+                  <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span></a>
                 </div>
                 <div class="card-box">
                   <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">X1</a></h5>
                 </div>
                 <div class="card-icon">
-                  <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span></a>
+                  <span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span>
                 </div>
               </div>
             </div>
@@ -309,7 +309,7 @@
                   <span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span>
                 </div>
                 <div class="card-box">
-                  <h5 class="link align-left mbr-fonts-style display-5">gggg</h5>
+                  <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">X2</a></h5>
                 </div>
                 <div class="card-icon">
                   <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span></a>
@@ -321,10 +321,10 @@
             <div class="card col-12 col-md-6 col-lg-3">
               <div class="card-inner">
                 <div class="card-img">
-                    <span class="mbr-iconfont mobi-mbri-idea mobi-mbri icon-1"></span>
+                    <span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span>
                 </div>
                 <div class="card-box">
-                  <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black">Development</a></h5>
+                  <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">X3</a></h5>
                 </div>
                 <div class="card-icon">
                   <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span></a>
@@ -338,11 +338,10 @@
                     <span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span>
                 </div>
                 <div class="card-box">
-                    <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black">
-                          Photography</a></h5>
+                    <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">X4</a></h5>
                 </div>
                 <div class="card-icon">
-                  <span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span>
+                  <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span></a>
                 </div>
               </div>
             </div>
@@ -361,13 +360,13 @@
             <div class="card col-12 col-md-6 col-lg-3">
               <div class="card-inner">
                 <div class="card-img">
-                  <span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span>
+                  <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span></a>
                 </div>
                 <div class="card-box">
-                  <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">5-series</a></h5>
+                  <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">X5</a></h5>
                 </div>
                 <div class="card-icon">
-                  <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span></a>
+                  <span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span>
                 </div>
               </div>
             </div>
@@ -377,7 +376,7 @@
                   <span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span>
                 </div>
                 <div class="card-box">
-                  <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">6-series</a></h5>
+                  <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">X6</a></h5>
                 </div>
                 <div class="card-icon">
                   <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span></a>
@@ -392,7 +391,7 @@
                     <span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span>
                 </div>
                 <div class="card-box">
-                  <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">7-series</a></h5>
+                  <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">X7</a></h5>
                 </div>
                 <div class="card-icon">
                   <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span></a>
@@ -406,7 +405,7 @@
                     <span class="mbr-iconfont icon-1 mobi-mbri-arrow-next mobi-mbri"></span>
                 </div>
                 <div class="card-box">
-                    <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">8-series</a></h5>
+                    <h5 class="link align-left mbr-fonts-style display-5"><a href="#" class="text-link text-black text-primary" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2">Z</a></h5>
                 </div>
                 <div class="card-icon">
                   <a href="#" data-toggle="modal" data-bs-toggle="modal" data-target="#mbr-popup-2" data-bs-target="#mbr-popup-2"><span class="mbr-iconfont icon-arrow mobi-mbri-right mobi-mbri"></span></a>
@@ -668,7 +667,7 @@
             <div class="modal-content">
                 <div class="container position-static margin-center-pos">
                     <div class="modal-header pb-0">
-                        <h5 class="modal-title mbr-fonts-style display-5">Popup Title</h5>
+                        <h5 class="modal-title mbr-fonts-style display-5">Запрос запчастей</h5>
                         <button type="button" class="close d-flex" data-dismiss="modal" data-bs-dismiss="modal" aria-label="Close">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="23" height="23" viewBox="0 0 23 23" fill="currentColor">
                                 <path d="M13.4 12l10.3 10.3-1.4 1.4L12 13.4 1.7 23.7.3 22.3 10.6 12 .3 1.7 1.7.3 12 10.6 22.3.3l1.4 1.4L13.4 12z">
@@ -679,8 +678,8 @@
 
                     <div class="modal-body">
                         <p class="mbr-text mbr-fonts-style display-7">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore incidunt molestias, vitae
-                            recusandae error ipsam
+                            Оставьте заявку на необходимые автозапчасти
+                            ответим в течении 15 минут.
                         </p>
 
                         <div>
